--- a/pom.xml
+++ b/pom.xml
@@ -38,5 +38,10 @@
 			<artifactId>sonicle-vfs2</artifactId>
 			<version>LATEST</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mnode.ical4j</groupId>
+			<artifactId>ical4j</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 	</dependencies>
 </project>
