--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
 			<version>${commons-collections4.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-dbutils</groupId>
+			<artifactId>commons-dbutils</artifactId>
+			<version>1.7</version>
+		</dependency>
+		<dependency>
 			<groupId>org.mnode.ical4j</groupId>
 			<artifactId>ical4j</artifactId>
 			<version>${ical4j.version}</version>
